# normalizing-flows

./: .gitignore  README.md  pyproject.toml
examples/: glow.ipynb  glow_colab.ipynb
normflows/: core_test.py
normflows/distributions/: base.py
normflows/flows/: __init__.py  mixing.py  reshape.py
normflows/flows/affine/: coupling.py  glow.py  glow_test.py
normflows/nets/: __init__.py  cnn.py
src/normflows/: __init__.py  core.py
src/normflows/distributions/: base.py
src/normflows/flows/: mixing.py  normalization.py  reshape.py
src/normflows/flows/affine/: __init__.py  coupling.py  glow.py
tests/flows/: reshape_test.py
