[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normflows"
dynamic = ["version", "dependencies"]
description = "PyTorch implementation of normalizing flows (Glow 2D/3D, coupling layers, utilities)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ntustison" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage   = "https://github.com/ntustison/normalizing-flows"
Repository = "https://github.com/ntustison/normalizing-flows"
Issues     = "https://github.com/ntustison/normalizing-flows/issues"

[project.optional-dependencies]
# pip install -e .[test], .[dev], .[docs], .[examples]
test = ["pytest>=8.0", "pytest-cov>=4.1", "hypothesis>=6.0"]
dev  = ["black>=24.0", "ruff>=0.6.0", "mypy>=1.8", "pre-commit>=3.6", "build>=1.2.1", "twine>=5.0"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["normflows*"]

[tool.setuptools.package-data]
normflows = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "normflows._version.__version__" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies.examples = { file = ["requirements_examples.txt"] }

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
